Add eacirc-core submodule to eacirc-streams

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,18 +1,51 @@
-include(cmake/build_gen_stream.cmake)
-include(cmake/detect_version.cmake)
+cmake_minimum_required(VERSION 3.4)
+project(eacirc-streams)
 
-add_executable(generator main.cc
-    generator
-    ../eacirc/seed
-    ../eacirc/streams
-    )
+set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/eacirc-core/cmake)
+include(build_stream)
 
-target_link_libraries(generator core)
+# === Set CXX flags ===
+if(CMAKE_COMPILER_IS_GNUCXX OR ${CMAKE_CXX_COMPILER_ID} MATCHES "Clang")
+    add_compile_options($<$<COMPILE_LANGUAGE:CXX>:-std=c++11> -Wall -Wextra)
+    add_compile_options(-fdiagnostics-color)
+elseif (MSVC AND (MSVC_VERSION GREATER 1700))
+    # nothing special yet
+else()
+    message(FATAL_ERROR "unsuported compiler id:${CMAKE_CXX_COMPILER_ID}, path: ${CMAKE_CXX_COMPILER}")
+endif()
+
+add_executable(eacirc-streams main.cc
+        generator
+        stream.h
+        streams.cc
+        streams.h
+        )
+
+set_target_properties(eacirc-streams PROPERTIES
+        LINKER_LANGUAGE CXX
+        )
+
+add_subdirectory(eacirc-core)
 
 add_subdirectory(streams/estream)
 add_subdirectory(streams/sha3)
 add_subdirectory(streams/block)
 
-build_gen_stream(estream)
-build_gen_stream(sha3)
-build_gen_stream(block)
+target_link_libraries(eacirc-streams eacirc-core)
+
+build_stream(eacirc-streams estream)
+build_stream(eacirc-streams sha3)
+build_stream(eacirc-streams block)
+
+# === Provide sources as Library ===
+add_library(eacirc-streams-lib STATIC
+        stream
+        streams.h
+        streams.cc
+        )
+
+set_target_properties(eacirc-streams-lib PROPERTIES
+        LINKER_LANGUAGE CXX
+        )
+
+target_link_libraries(eacirc-streams-lib eacirc-core)
