Blowfish implemented, generator.py updated (argument for blowfish -f BLOWFISH) and added

--- a/streams/block/CMakeLists.txt
+++ b/streams/block/CMakeLists.txt
@@ -10,6 +10,8 @@ add_library(block STATIC EXCLUDE_FROM_ALL
     ciphers/des/des
     ciphers/des/single_des
     ciphers/des/triple_des
+    ciphers/blowfish/blowfish
+    ciphers/blowfish/blowfish_factory
     )
 
 target_link_libraries(block eacirc-core)
