--- a/streams/block/CMakeLists.txt
+++ b/streams/block/CMakeLists.txt
@@ -7,6 +7,7 @@ add_library(block STATIC EXCLUDE_FROM_ALL
     ciphers/tea/tea
     ciphers/aes/aes
     ciphers/simon/simon
+    ciphers/speck/speck
     ciphers/rc4/rc4
     ciphers/des/des
     ciphers/des/single_des
