sha1, sha2, md5 added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,7 @@ include(build_stream)
 
 # === Set CXX flags ===
 if(CMAKE_COMPILER_IS_GNUCXX OR ${CMAKE_CXX_COMPILER_ID} MATCHES "Clang")
-    add_compile_options($<$<COMPILE_LANGUAGE:CXX>:-std=c++11> -Wall -Wextra)
+    add_compile_options($<$<COMPILE_LANGUAGE:CXX>:-std=c++14> -Wall -Wextra)
     add_compile_options(-fdiagnostics-color)
 elseif (MSVC AND (MSVC_VERSION GREATER 1700))
     # nothing special yet
@@ -62,7 +62,7 @@ if (NOT BUILD_testsuite)
     target_link_libraries(eacirc-streams eacirc-core eacirc-streams-lib)
 
     build_stream(eacirc-streams estream)
-    build_stream(eacirc-streams hash)
+    build_stream(eacirc-streams sha3)
     build_stream(eacirc-streams block)
 
 else()
