Fixed Trivium and Mickey functions (estream finalists)
Mickey had test vectors without IV, so the simple fix was noting "empty" as a IV in test vector

--- a/streams/estream/CMakeLists.txt
+++ b/streams/estream/CMakeLists.txt
@@ -92,7 +92,7 @@ add_library(estream STATIC EXCLUDE_FROM_ALL
     ciphers/cryptmt/cryptmt-v3.cpp
     ciphers/achterbahn/achterbahn-128-80.cpp
     ciphers/abc/abc-v3.cpp
-    #    ciphers/trivium/trivium.cpp       # stopped working after IDE update
+    ciphers/trivium/trivium.cpp
     #    ciphers/yamb/yamb.cpp             # stopped working after IDE update
     #    ciphers/polarbear/polar-bear.cpp  # not implemented in EncryptorDecryptor
     #    ciphers/polarbear/aescrypt.cpp    # do not include!
