rc6 added with test vectors

--- a/streams/block/CMakeLists.txt
+++ b/streams/block/CMakeLists.txt
@@ -16,10 +16,8 @@ add_library(block STATIC EXCLUDE_FROM_ALL
     ciphers/blowfish/blowfish_factory
     ciphers/twofish/twofish
     ciphers/twofish/twofish_factory
-    #ciphers/rc6/rc6
-    #ciphers/rc6/rc6_factory
-    #ciphers/serpent/serpent
-    #ciphers/serpent/serpent_factory
+    ciphers/rc6/rc6
+    ciphers/rc6/rc6_factory
     )
 
 target_link_libraries(block eacirc-core)
