--- a/streams/block/CMakeLists.txt
+++ b/streams/block/CMakeLists.txt
@@ -6,6 +6,7 @@ add_library(block STATIC EXCLUDE_FROM_ALL
     # === eSTREAM cipher files ===
     ciphers/tea/tea
     ciphers/aes/aes
+    ciphers/camellia/camellia
     ciphers/gost/gost89
     ciphers/gost/gost_block
     ciphers/simon/simon
