--- a/streams/block/CMakeLists.txt
+++ b/streams/block/CMakeLists.txt
@@ -7,6 +7,7 @@ add_library(block STATIC EXCLUDE_FROM_ALL
     ciphers/tea/tea
     ciphers/aes/aes
     ciphers/aria/aria
+    ciphers/aria/aria_block
     ciphers/camellia/camellia
     ciphers/camellia/camellia_block
     ciphers/gost/gost89
