initial IDEA implementation added

--- a/streams/block/CMakeLists.txt
+++ b/streams/block/CMakeLists.txt
@@ -22,6 +22,7 @@ add_library(block STATIC EXCLUDE_FROM_ALL
     ciphers/des/triple_des    
     ciphers/blowfish/blowfish
     ciphers/blowfish/blowfish_factory
+    ciphers/idea/idea
     )
 
 target_link_libraries(block eacirc-core)
