IDEA block cipher added + tests

--- a/streams/block/CMakeLists.txt
+++ b/streams/block/CMakeLists.txt
@@ -23,6 +23,7 @@ add_library(block STATIC EXCLUDE_FROM_ALL
     ciphers/blowfish/blowfish
     ciphers/blowfish/blowfish_factory
     ciphers/idea/idea
+    ciphers/idea/idea_block
     )
 
 target_link_libraries(block eacirc-core)
