--- a/streams/hash/others/CMakeLists.txt
+++ b/streams/hash/others/CMakeLists.txt
@@ -6,6 +6,10 @@ add_library(others STATIC EXCLUDE_FROM_ALL
     hash_functions/sha2/sha256_factory
     hash_functions/md5/md5
     hash_functions/md5/md5_factory
+    hash_functions/whirlpool/whirlpool
+    hash_functions/whirlpool/whirlpool_sbox.cpp
+    hash_functions/whirlpool/whirlpool_factory
+    hash_functions/whirlpool/byte_order
     )
 target_link_libraries(others eacirc-core)
 
