--- a/streams/hash/others/CMakeLists.txt
+++ b/streams/hash/others/CMakeLists.txt
@@ -6,6 +6,8 @@ add_library(others STATIC EXCLUDE_FROM_ALL
     hash_functions/sha2/sha256_factory
     hash_functions/md5/md5
     hash_functions/md5/md5_factory
+    hash_functions/ripemd160/ripemd160
+    hash_functions/ripemd160/ripemd160_factory
     hash_functions/tiger/tiger
     hash_functions/tiger/tiger_sbox.cpp
     hash_functions/tiger/tiger_factory
