--- a/streams/block/CMakeLists.txt
+++ b/streams/block/CMakeLists.txt
@@ -26,6 +26,8 @@ add_library(block STATIC EXCLUDE_FROM_ALL
     ciphers/idea/idea_block
     ciphers/cast/cast
     ciphers/cast/cast_block
+    ciphers/kasumi/kasumi
+    ciphers/kasumi/kasumi_factory
     )
 
 target_link_libraries(block eacirc-core)
