--- a/streams/block/CMakeLists.txt
+++ b/streams/block/CMakeLists.txt
@@ -28,6 +28,8 @@ add_library(block STATIC EXCLUDE_FROM_ALL
     ciphers/cast/cast_block
     ciphers/kasumi/kasumi
     ciphers/kasumi/kasumi_factory
+    ciphers/kuznyechik/kuznyechik
+    ciphers/kuznyechik/kuznyechik_factory
     )
 
 target_link_libraries(block eacirc-core)
