--- a/streams/block/CMakeLists.txt
+++ b/streams/block/CMakeLists.txt
@@ -32,6 +32,8 @@ add_library(block STATIC EXCLUDE_FROM_ALL
     ciphers/kuznyechik/kuznyechik_factory
     ciphers/misty1/misty1
     ciphers/misty1/misty1_factory
+    ciphers/noekeon/noekeon
+    ciphers/noekeon/noekeon_factory
     )
 
 target_link_libraries(block eacirc-core)
