--- a/streams/prngs/CMakeLists.txt
+++ b/streams/prngs/CMakeLists.txt
@@ -4,7 +4,10 @@ add_library(prngs STATIC EXCLUDE_FROM_ALL
         prng_stream.h
         prng_interface.h)
 
+add_subdirectory(std-prngs)
 add_subdirectory(testu01-prngs)
+
+build_stream(prngs std-prngs)
 build_stream(prngs testu01-prngs)
 
 target_link_libraries(prngs eacirc-core)
