--- a/streams/prngs/std-prngs/CMakeLists.txt
+++ b/streams/prngs/std-prngs/CMakeLists.txt
@@ -5,6 +5,8 @@ add_library(std-prngs STATIC EXCLUDE_FROM_ALL
         std_prng_interface.h
 
         functions/lcg_generator.h
+        functions/subtract_with_carry_generator.h
+        functions/mesenne_twister_generator.h
         )
 
 target_link_libraries(std-prngs eacirc-core)
